logs/mrsd_ros_tutorials/build.make.286.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::transformCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:140:12: error: ‘TransformBroadcaster’ in namespace ‘tf’ does not name a type
     static tf::TransformBroadcaster br1;
            ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:141:12: error: ‘TransformBroadcaster’ in namespace ‘tf’ does not name a type
     static tf::TransformBroadcaster br2;
            ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:156:5: error: ‘br1’ was not declared in this scope
     br1.sendTransform(tf::StampedTransform(tf_apriltag, ros::Time::now(), "kinect2_rgb_optical_frame","world"));
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:157:5: error: ‘br2’ was not declared in this scope
     br2.sendTransform(tf::StampedTransform(tf_apriltag, ros::Time::now(), "transformed_apriltag_frame","world"));
     ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make: *** [all] Error 2
